[project]
name = "cnapy"
version = "1.2.4"
authors = [
  { name="Sven Thiele" },
  { name="Axel von Kamp" },
  { name="Pavlos Stephanos Bekiaris" },
  { name="Philipp Schneider" }
]
description = "An integrated environment for metabolic network analysis."
readme = "README.md"
requires-python = "==3.10.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = ["appdirs>=1.4", "matplotlib>=3.6", "requests>=2.28",
                "cobra>=0.29", "efmtool_link>=0.0.8", "optlang_enumerator>=0.0.12", "straindesign>=1.12",
                "qtpy>=2.3", "pyqtwebengine>=5.15", "qtconsole==5.4",
                "gurobipy==11.*", "cplex>=22.1", "numpy==1.23", "scipy==1.12", "openpyxl", "jpype1==1.5.0"]

[project.scripts]
cnapy = "cnapy.__main__:main_cnapy"
[project.urls]
Homepage = "https://github.com/cnapy-org/CNApy"
Issues = "https://github.com/cnapy-org/CNApy/issues"
