[project]
name = "cnapy"
version = "1.2.7"
authors = [
  { name="Sven Thiele" },
  { name="Axel von Kamp" },
  { name="Pavlos Stephanos Bekiaris" },
  { name="Philipp Schneider" }
]
description = "An integrated environment for metabolic network analysis."
readme = "README.md"
requires-python = "==3.10.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "appdirs>=1.4",
    "matplotlib>=3.6",
    "requests>=2.28",
    "cobra>=0.30",
    "efmtool_link>=0.0.8",
    "optlang_enumerator>=0.0.12",
    "straindesign>=1.12",
    "qtpy>=2.3",
    "pyqtwebengine>=5.15",
    "qtconsole==5.7",
    "gurobipy>=12.0",
    "cplex==22.1.2.0", # We use this specific version as it's currently the last one with support for ARM CPUs
    "numpy==1.23",
    "scipy==1.12",
    "openpyxl",
    "jpype1==1.6.0",
    "setuptools",
    "cobrak==0.0.7",
    "pydantic",
    "ruff",
]

[project.scripts]
cnapy = "cnapy.__main__:main_cnapy"
[project.urls]
Homepage = "https://github.com/cnapy-org/CNApy"
Issues = "https://github.com/cnapy-org/CNApy/issues"
