[project]
name = "cnapy"
version = "1.2.8"
authors = [
  { name="Sven Thiele" },
  { name="Axel von Kamp" },
  { name="Pavlos Stephanos Bekiaris" },
  { name="Philipp Schneider" }
]
description = "An integrated environment for metabolic network analysis."
readme = "README.md"
requires-python = "==3.10.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "appdirs>=1.4",
    "matplotlib>=3.6",
    "requests>=2.28",
    "cobra>=0.30",
    "efmtool_link>=0.0.8",
    "optlang_enumerator>=0.0.15",
    "straindesign>=1.18",
    "qtpy>=2.3",
    "pyqtwebengine>=5.15",
    "qtconsole==5.4",
    "gurobipy>=12.0",
    "cplex",
    "docplex",
    "numpy",
    "scipy",
    "openpyxl",
    "jpype1==1.5.0",
    "setuptools",
    "cobrak==0.0.2",
]

[project.scripts]
cnapy = "cnapy.__main__:main_cnapy"
[project.urls]
Homepage = "https://github.com/cnapy-org/CNApy"
Issues = "https://github.com/cnapy-org/CNApy/issues"
